@@ -6,6 +6,8 @@ EXTRA_DIST =
 
 geos_HEADERS = \
 	DouglasPeuckerLineSimplifier.h \
-	DouglasPeuckerSimplifier.h
+	DouglasPeuckerSimplifier.h \
+	TaggedLineSegment.h \
+	TaggedLineString.h
 
 nodist_geos_HEADERS = 
